force-app/main/default/objects/KAM_Sales_Bulletin__c/KAM_Sales_Bulletin__c.object-meta.xml
<CustomObject>
    <description>Central dashboard record for Key Account Managers to monitor account health, alerts, and opportunities across their assigned retailers.</description>
    <label>KAM Sales Bulletin</label>
    <nameField>
        <label>Bulletin Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KAM Sales Bulletins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>