force-app/main/default/objects/KAM_Sales_Bulletin__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>KAM Sales Bulletins</relationshipLabel>
    <relationshipName>KAM_Sales_Bulletins</relationshipName>
    <type>Lookup</type>
</CustomField>